--- a/packages/task-app/package.json
+++ b/packages/task-app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.7",
+    "sass": "^1.69.7",
     "tailwind-merge": "^1.13.1",
     "typescript": "5.0.4"
   },
