--- a/packages/task-app/package.json
+++ b/packages/task-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.3",
+    "@next/font": "^14.2.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
