--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@babylonjs/materials": "^6.16.0",
     "babylonjs": "^6.16.0",
     "react-babylonjs": "^3.1.17",
+    "react-hook-form": "^7.51.4",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "zod": "^3.23.8"
   },
   "description": "<h1>T-Task</h1>",
   "main": "index.js",
